css/styles.css
/* ... */
.team-member {
  margin-bottom: 3rem;
  text-align: center;
}

.team-member img {
  width: 14rem;
  height: 14rem;
  border: 0.5rem solid rgba(0, 0, 0, 0.1);
}

.team-member h4 {
  margin-top: 1.5rem;
  margin-bottom: 0;
}

section#contact {
  background-color: #212529;
  background-image: url("../assets/img/courthouse.jpg");
  background-repeat: no-repeat;
  background-position: center;
}

section#contact .section-heading {
  color: #fff;
}

section#contact form#contactForm .form-group {
  margin-bottom: 1.5rem;
}

section#contact form#contactForm .form-group input,
section#contact form#contactForm .form-group textarea {
  padding: 1.25rem;
}

section#contact form#contactForm .form-group input.form-control {
  height: auto;
}

section#contact form#contactForm .form-group-textarea {
  height: 100%;
}

section#contact form#contactForm .form-group-textarea textarea {
  height: 100%;
  min-height: 10rem;
}

section#contact form#contactForm p.help-block {
  margin: 0;
}

.help-block ul {
  list-style-type: none;
  padding: 0;
  font-size: 1rem;
  font-weight: bold;
}

section#contact form#contactForm .form-control:focus {
  border-color: #cdba6d;
  box-shadow: none;
}

section#contact form#contactForm ::-webkit-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}

section#contact form#contactForm :-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}

section#contact form#contactForm ::-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}

section#contact form#contactForm :-ms-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}

#contactButton{
  display: inline-block;
}

.contact a{
  display: inline-block;
  color: white;
  font-size: 20px;
}


.contact a:hover{
  text-decoration: none;
}

.footer {
  text-align: center;
  font-size: 0.9rem;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.avvo-img{
  max-width: 100%;
  max-width: 100px;
  height: auto;
  }

#footnote {
  background: #212529;
  color: white;
}

.profile img {
  width: 250px;
  padding-top: 10px;
}

.profile {
  width: 250px;
  /* height: 265px; */
  /* float: left; */
  /* margin: 0rem 0rem 1rem 1rem; */
}

.call-now {
  height: 100%;
}

#small-title {
  display: none;
}

@media only screen and (max-width: 450px) {
  #large-title, .navbar-brand {
    display: none;
  }

  #small-title {
    display: block;
  }

  .timeline-body {
    margin-left: -45px;
  }
}

@media only screen and (max-width: 500px) {
  .modal-body .profile img {
    display: none !important;
  }
}

@media only screen and (max-width: 600px) {
  .modal-dialog {
    margin: 0px !important;
    margin-right: -17px !important;
  }
}

